methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:15: error: identifier expected but 'def' found.
def marquerSol(){
^