methods.picture.MethodsPicture.scala.code
override def run() {
  
	faireV(Color.YELLOW)
  faireV(Color.RED)
  faireV(Color.BLUE)
  faireV(Color.GREEN)
  
}

def



//marque le sol
def marquerSol(){
  baisseBrosse()
  leveBrosse()
}

//fait un seul V => une seule couleur
def faireV (c:Color){
  setCouleurBrosse(c:Color)
  avance()
  marquerSol()
  avance()
  gauche()
  avance()
  marquerSol()
  recule()
  droite()
  avance()
  marquerSol()
  avance()
  avance()
  gauche()  
  
}